--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "babel-plugin-react-native-web": "^0.17.7",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -37,11 +38,17 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
+    "babel-preset-expo": "^9.0.2",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "private": true
 }
